Changed project hashs to not include .html extension.

--- a/home.html
+++ b/home.html
@@ -350,70 +350,70 @@
         </section>
         <section id="portfolio-grid" class="clear">
           <div class="portfolioBase"></div>
-          <div class="portfolio-element element tools backend hideme fade" id="project-01.html">
+          <div class="portfolio-element element tools backend hideme fade" id="project-01">
             <img class="portfolio-image" src="img/portfolio/thumb-01.jpg" alt="Image not found. Please try reloading.">
             <div>
               <span><span class="project-title"></span>Matrix Calculator<span class="project-position">Tool Developer</span></span>
             </div>
           </div>
 
-          <div class="portfolio-element element mobile hideme fade" id="project-02.html">
+          <div class="portfolio-element element mobile hideme fade" id="project-02">
             <img class="portfolio-image" src="img/portfolio/thumb-02.jpg" alt="Image not found. Please try reloading.">
             <div>
               <span><span class="project-title"></span>Android Game<span class="project-position">Mobile Game Developer</span></span>
             </div>
           </div>
 
-          <div class="portfolio-element element backend hardware hideme fade" id="project-03.html">
+          <div class="portfolio-element element backend hardware hideme fade" id="project-03">
             <img class="portfolio-image" src="img/portfolio/thumb-03.jpg" alt="Image not found. Please try reloading.">
             <div>
               <span><span class="project-title"></span>Automated Teller Machine<span class="project-position">Embedded Software Developer</span></span>
             </div>
           </div>
 
-          <div class="portfolio-element element web mobile hideme fade" id="project-04.html">
+          <div class="portfolio-element element web mobile hideme fade" id="project-04">
             <img class="portfolio-image" src="img/portfolio/thumb-04.jpg" alt="Image not found. Please try reloading.">
             <div>
               <span><span class="project-title"></span>Portfolio Website<span class="project-position">Full Stack Web Developer</span></span>
             </div>
           </div>
 
-          <div class="portfolio-element element tools backend hideme fade" id="project-05.html">
+          <div class="portfolio-element element tools backend hideme fade" id="project-05">
             <img class="portfolio-image" src="img/portfolio/thumb-05.png" alt="Image not found. Please try reloading.">
             <div>
               <span><span class="project-title"></span>Balance Tracker<span class="project-position">Tool Developer</span></span>
             </div>
           </div>
 
-          <div class="portfolio-element element hardware backend hideme fade" id="project-06.html">
+          <div class="portfolio-element element hardware backend hideme fade" id="project-06">
             <img class="portfolio-image" src="img/portfolio/thumb-06.jpg" alt="Image not found. Please try reloading.">
             <div>
               <span><span class="project-title"></span>Fuel Cell Car<span class="project-position">Embedded Software Developer</span></span>
             </div>
           </div>
 
-          <div class="portfolio-element element tools backend hideme fade" id="project-07.html">
+          <div class="portfolio-element element tools backend hideme fade" id="project-07">
             <img class="portfolio-image" src="img/portfolio/thumb-07.png" alt="Image not found. Please try reloading.">
             <div>
               <span><span class="project-title"></span>Python Auto Clicker<span class="project-position">Tool Developer</span></span>
             </div>
           </div>
 
-          <div class="portfolio-element element hardware hideme fade" id="project-08.html">
+          <div class="portfolio-element element hardware hideme fade" id="project-08">
             <img class="portfolio-image" src="img/portfolio/thumb-08.jpg" alt="Image not found. Please try reloading.">
             <div>
               <span><span class="project-title"></span>Electric Cars<span class="project-position">Hardware Design Engineer</span></span>
             </div>
           </div>
 
-          <div class="portfolio-element element tools web hideme fade" id="project-09.html">
+          <div class="portfolio-element element tools web hideme fade" id="project-09">
             <img class="portfolio-image" src="img/portfolio/thumb-09.png" alt="Image not found. Please try reloading.">
             <div>
               <span><span class="project-title"></span>Facebook Online Friend Tracker<span class="project-position">Data Scientist</span></span>
             </div>
           </div>
 
-          <div class="portfolio-element element tools mobile web hardware backend hideme fade" id="project-10.html">
+          <div class="portfolio-element element tools mobile web hardware backend hideme fade" id="project-10">
             <img class="portfolio-image" src="img/portfolio/thumb-10.png" alt="Image not found. Please try reloading.">
             <div>
               <span><span class="project-title"></span>Personal Assistant Android App<span class="project-position">Mobile App Developer</span></span>
