Updated personal assistant android app project title.

--- a/home.html
+++ b/home.html
@@ -416,7 +416,7 @@
           <div class="portfolio-element element tools mobile web hardware backend hideme fade" id="project-10">
             <img class="portfolio-image" src="img/portfolio/thumb-10.png" alt="Image not found. Please try reloading.">
             <div>
-              <span><span class="project-title"></span>Personal Assistant Android App<span class="project-position">Mobile App Developer</span></span>
+              <span><span class="project-title"></span>Home Automation & Personal Assistant<span class="project-position">Mobile App Developer</span></span>
             </div>
           </div>
           <div class="final"></div>
