--- a/project-10.html
+++ b/project-10.html
@@ -2,7 +2,7 @@
   <div class="clear"></div>
   <div class="project-info">
     <div class="tag-project">MOBILE APP DEVELOPER</div>
-    <div class="title-project">PERSONAL ASSISTANT ANDROID APP</div>
+    <div class="title-project">HOME AUTOMATION & PERSONAL ASSISTANT</div>
     <div class="spacer"></div>
     <div class="description">
       <h3>General Overview</h3>
