--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Baraa Hamodi - Mechatronics Engineer</title>
+  <title>Baraa Hamodi</title>
 
   <!-- Behavioral Meta Data -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -14,7 +14,7 @@
   <meta name="keywords" content="mechatronics,software,engineer,developer,html5,css3,javascript,python,design,java,c++,robotics">
 
   <!-- Open Graph Meta Data -->
-  <meta property="og:title" content="Baraa Hamodi - Mechatronics Engineer">
+  <meta property="og:title" content="Baraa Hamodi">
   <meta property="og:type" content="website">
   <meta property="og:image" content="http://baraa.ca/img/thumbnail.png">
   <meta property="og:url" content="http://baraa.ca">
@@ -55,7 +55,7 @@
       <li class="layer" data-depth="0.15"><div class="triangles"></div></li>
 
       <!-- Main header -->
-      <li class="layer" data-depth="0.20"><div class="title"><h2>MECHATRONICS ENGINEER</h2><span class="line"></span></div></li>
+      <li class="layer" data-depth="0.20"><div class="title"><h2>MECHATRONICS ENGINEERING STUDENT</h2><span class="line"></span></div></li>
       <li class="layer" data-depth="0.30"><div class="main-title"><h1>Baraa Hamodi</h1><p class="sub-title text-outline">A young man with big dreams</p></div></li>
 
       <!-- Flakes -->
