Added Facebook internship to the experience section.

--- a/home.html
+++ b/home.html
@@ -257,6 +257,17 @@
     <div class="spacer"></div>
     <div class="title two hideme fade">Check out where I've worked!</div>
     <div id="work" class="work-container">
+      <div class="work-exp-left-0 hideme">
+        <div class="work-logo"><img src="img/work/facebook.png" alt="Image not found. Please try reloading."></div>
+        <div class="work-company"><b>FACEBOOK INC.</b></div>
+        <div class="work-position">Software Engineering Intern</div>
+        <div class="work-location">Menlo Park, California</div>
+        <div class="work-description">
+          <ul>
+            <li>Working on full stack features for the Search team.</li>
+          </ul>
+        </div>
+      </div>
       <div class="work-exp-right-0 hideme">
         <div class="work-logo"><img src="img/work/optimizely.png" alt="Image not found. Please try reloading."></div>
         <div class="work-company"><b>OPTIMIZELY INC.</b></div>
