--- a/home.html
+++ b/home.html
@@ -434,7 +434,22 @@
       <div id="contact" class="title one hideme fade">CONTACT</div>
       <div class="spacer"></div>
       <div class="title two hideme fade">I like to create things with fun, like-minded people. Feel free to say hello!</div>
-      <div class="email hideme fade">Contact me at: <a href="mailto:bhamodi@uwaterloo.ca" target="_blank">bhamodi@uwaterloo.ca</a></div>
+      <form action="mailto:bhamodi@uwaterloo.ca?subject=Email from Baraa's Personal Portfolio" target="_blank" class="contactForm" method="post" enctype="text/plain">
+        <div class="bay form-horizontal">
+          <div class="form-section">
+            <input class="span9" type="text" name="name" placeholder="FULL NAME">
+          </div>
+          <div class="form-section">
+            <input class="span9" type="text" name="email" placeholder="YOUR EMAIL">
+          </div>
+          <div class="form-section">
+            <textarea class="span9" type="text" name="message" rows="12" placeholder="TYPE MESSAGE"></textarea>
+          </div>
+          <div class="form-section">
+            <button type="submit" class="contour-btn green">SEND MESSAGE</button>
+          </div>
+        </div>
+      </form>
       <div class="contact">
         <ul class="icons hideme fade">
           <li><a class="github" href="https://github.com/bhamodi" target="_blank"></a></li>
