--- a/home.html
+++ b/home.html
@@ -257,7 +257,7 @@
     <div class="spacer"></div>
     <div class="title two hideme fade">Check out where I've worked!</div>
     <div id="work" class="work-container">
-      <div class="work-exp-left-0 hideme">
+      <div class="work-exp work-exp-left-0 hideme">
         <div class="work-logo"><img src="img/work/facebook.png" alt="Image not found. Please try reloading."></div>
         <div class="work-company"><b>FACEBOOK INC.</b></div>
         <div class="work-position">Software Engineering Intern</div>
@@ -268,7 +268,7 @@
           </ul>
         </div>
       </div>
-      <div class="work-exp-right-0 hideme">
+      <div class="work-exp work-exp-right-0 hideme">
         <div class="work-logo"><img src="img/work/optimizely.png" alt="Image not found. Please try reloading."></div>
         <div class="work-company"><b>OPTIMIZELY INC.</b></div>
         <div class="work-position">Software Engineering Intern</div>
@@ -282,7 +282,7 @@
           </ul>
         </div>
       </div>
-      <div class="work-exp-left-1 hideme fade">
+      <div class="work-exp work-exp-left-1 hideme fade">
         <div class="work-logo"><img src="img/work/tagged.png" alt="Image not found. Please try reloading."></div>
         <div class="work-company"><b>TAGGED INC.</b></div>
         <div class="work-position">Software Engineering Intern</div>
@@ -297,7 +297,7 @@
           </ul>
         </div>
       </div>
-      <div class="work-exp-right-1 hideme fade">
+      <div class="work-exp work-exp-right-1 hideme fade">
         <div class="work-logo"><img src="img/work/ibm.png" alt="Image not found. Please try reloading."></div>
         <div class="work-company"><b>IBM INC.</b></div>
         <div class="work-position">Software Engineering Intern</div>
@@ -312,7 +312,7 @@
           </ul>
         </div>
       </div>
-      <div class="work-exp-left-2 hideme fade">
+      <div class="work-exp work-exp-left-2 hideme fade">
         <div class="work-logo"><img src="img/work/onprint.png" alt="Image not found. Please try reloading."></div>
         <div class="work-company"><b>ONPRINT INC.</b></div>
         <div class="work-position">Graphic Designer</div>
