Update Facebook work experience.

--- a/home.html
+++ b/home.html
@@ -277,7 +277,10 @@
         <div class="work-location">Menlo Park, California</div>
         <div class="work-description">
           <ul>
-            <li>Working on full stack features for the Search team.</li>
+            <li>Released multiple full stack features for the Search/Trending team using PHP (Hack), JavaScript (React) and HTML/CSS.</li>
+            <li>Increased time spent by 33% on Search Engine Result Pages by implementing interactive modules.</li>
+            <li>Built and released a live Presidential Election Results module on Facebook Search/Trending from scratch.</li>
+            <li>Improved content quality on Search Engine Result Pages by adding new query intents and modules.</li>
           </ul>
         </div>
       </div>
