Fixed topscroll issue on mobile.

--- a/home.html
+++ b/home.html
@@ -94,10 +94,10 @@
         <span><span></span></span>BARAA HAMODI
       </div>
     </a>
-    <nav id="navbar" role="navigation">
+    <nav id="navbar">
       <a class="jump-menu"></a>
-      <ul>
-        <li class="current"><a href="#home">HOME</a></li>
+      <ul id="mobile-nav">
+        <li class="mobile-current"><a href="#home">HOME</a></li>
         <li><a href="#skills">SKILLS</a></li>
         <li><a href="#stats">STATS</a></li>
         <li><a href="#experience">EXPERIENCE</a></li>
