--- a/home.html
+++ b/home.html
@@ -44,7 +44,7 @@
 
   <!-- Fonts -->
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Montserrat:400,700">
-  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,300,600,700">
+  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
 
   <!-- Styles -->
   <link rel="stylesheet" href="css/dist/home.min.css">
