--- a/home.html
+++ b/home.html
@@ -461,7 +461,7 @@
       <div id="contact" class="title one hideme fade">CONTACT</div>
       <div class="spacer"></div>
       <div class="title two hideme fade">I like to create things with fun, like-minded people. Feel free to say hello!</div>
-      <form action="https://formspree.io/bhamodi@uwaterloo.ca" class="contactForm" method="post">
+      <form action="https://formspree.io/bhamodi@edu.uwaterloo.ca" class="contactForm" method="post">
         <div class="bay form-horizontal">
           <div class="form-section">
             <input class="span9" type="text" name="name" placeholder="FULL NAME">
