--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <li><a class="codecademy" href="https://www.codecademy.com/bhamodi" target="_blank"></a></li>
             <li><a class="linkedin" href="https://www.linkedin.com/in/baraahamodi" target="_blank"></a></li>
           </ul>
-          <a class="mail" href="mailto:bhamodi@uwaterloo.ca" target="_blank">bhamodi@uwaterloo.ca</a>
+          <a class="mail" href="mailto:bhamodi@edu.uwaterloo.ca" target="_blank">bhamodi@edu.uwaterloo.ca</a>
         </div>
       </li>
     </ul>
