--- a/home.html
+++ b/home.html
@@ -42,13 +42,6 @@
   <meta name="msapplication-config" content="/img/icons/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
 
-  <!-- Fonts -->
-  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Montserrat:400,700">
-  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
-
-  <!-- Styles -->
-  <link rel="stylesheet" href="css/dist/home.min.css">
-
   <!-- Google Analytics -->
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -492,6 +485,14 @@
 
   <a href="#home" class="scrollup">^</a>
 
+  <!-- Fonts -->
+  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Montserrat:400,700">
+  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
+
+  <!-- Styles -->
+  <link rel="stylesheet" href="css/dist/home.min.css">
+
+  <!-- JavaScript -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="js/dist/home.min.js"></script>
 </body>
