--- a/index.html
+++ b/index.html
@@ -42,12 +42,6 @@
   <meta name="msapplication-config" content="/img/icons/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
 
-  <!-- Fonts -->
-  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Montserrat:700%7CCardo">
-
-  <!-- Styles -->
-  <link rel="stylesheet" href="css/dist/index.min.css"/>
-
   <!-- Google Analytics -->
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -119,7 +113,13 @@
     </ul>
   </div>
 
-  <!-- Javascript -->
+  <!-- Fonts -->
+  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Montserrat:700%7CCardo">
+
+  <!-- Styles -->
+  <link rel="stylesheet" href="css/dist/index.min.css"/>
+
+  <!-- JavaScript -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="js/dist/main.min.js"></script>
 </body>
