--- a/home.html
+++ b/home.html
@@ -493,7 +493,7 @@
   <link rel="stylesheet" href="css/dist/home.min.css">
 
   <!-- JavaScript -->
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-  <script src="js/dist/home.min.js"></script>
+  <script defer src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <script defer src="js/dist/home.min.js"></script>
 </body>
 </html>
