Removed PHP references.

--- a/project-04.html
+++ b/project-04.html
@@ -7,11 +7,11 @@
     <div class="description">
       <h3>General Overview</h3>
       <p>
-        This entire website is a result of this project. I found this project to be really fun as I was able to completely design every aspect of the website from the group up, no restrictions. I took the required steps to make this website fully responsive so that it adjusts to any screen size. I made sure that my website has a nice UI & UX on both desktop and mobile. I also went through a lot of optimization stages to ensure that the content is easily accessible to the users and that the website loads up as fast as possible.
+        This entire website is a result of this project. I found this project to be really fun as I was able to completely design every aspect of the website from the ground up, no restrictions. I took the required steps to make this website fully responsive so that it adjusts to any screen size. I made sure that my website has a nice UI & UX on both desktop and mobile. I also went through a lot of optimization stages to ensure that the content is easily accessible to users and that the website loads as fast as possible. I used Google's PageSpeed Insights to discover all the methods of speed and performance optimization.
       </p>
       <h3>Software</h3>
       <p>
-        I built this website using the following languages: HTML, CSS, JavaScript (including jQuery) and PHP. You can find all the source code for this website on my <a href="https://github.com/bhamodi/bhamodi.github.io" target="_blank">GitHub.</a>
+        I built this website using the following languages: HTML, CSS, and JavaScript (including jQuery). You can find all the source code for this website on my <a href="https://github.com/bhamodi/bhamodi.github.io" target="_blank">GitHub.</a>
       </p>
     </div>
   </div>
