Changed wording of parallax scroller.

--- a/home.html
+++ b/home.html
@@ -263,8 +263,8 @@
   </article>
 
   <article class="parallax p-two">
-    <div class="p-title-one p-dark hideme fade">ULTRA RESPONSIVE</div>
-    <div class="p-title-two hideme fade">ON BOTH MOBILE & DESKTOP</div>
+    <div class="p-title-one p-dark hideme fade">DEVELOPED FOR</div>
+    <div class="p-title-two hideme fade">MOBILE & DESKTOP</div>
     <div class="spacer horizontal-line"></div>
     <div class="mobile-parallax-image hideme-slide fade"><img src="img/parallax/mobile-parallax-image.png" alt="Image not found. Please try reloading."></div>
   </article>
