--- a/home.html
+++ b/home.html
@@ -275,6 +275,19 @@
     <div class="title two hideme fade">Check out where I've worked!</div>
     <div id="work" class="work-container">
       <div class="work-exp work-exp-left-0 hideme">
+        <div class="work-logo"><img src="img/work/facebook.png" alt="Image not found. Please try reloading."></div>
+        <div class="work-company"><b>FACEBOOK</b></div>
+        <div class="work-position">Software Engineering Intern</div>
+        <div class="work-location">Menlo Park, California</div>
+        <div class="work-description">
+          <ul>
+            <li>Implemented machine learning and ranking algorithms for the News Feed Integrity team.</li>
+            <li>Combatted false news, clickbait, ad farms, and deceptive UI elements on news feed using machine learning.</li>
+            <li>Modernized the news feed codebase by improving type coverage by 37.5%, upgrading to ES6 standards, and removing over 12,500 lines of dead code.</li>
+          </ul>
+        </div>
+      </div>
+      <div class="work-exp work-exp-right-0 hideme">
         <div class="work-logo"><img src="img/work/messenger.png" alt="Image not found. Please try reloading."></div>
         <div class="work-company"><b>FACEBOOK MESSENGER</b></div>
         <div class="work-position">Software Engineering Intern</div>
@@ -287,7 +300,7 @@
           </ul>
         </div>
       </div>
-      <div class="work-exp work-exp-right-0 hideme">
+      <div class="work-exp work-exp-left-1 hideme">
         <div class="work-logo"><img src="img/work/facebook.png" alt="Image not found. Please try reloading."></div>
         <div class="work-company"><b>FACEBOOK</b></div>
         <div class="work-position">Software Engineering Intern</div>
@@ -301,7 +314,7 @@
           </ul>
         </div>
       </div>
-      <div class="work-exp work-exp-left-1 hideme">
+      <div class="work-exp work-exp-right-1 hideme">
         <div class="work-logo"><img src="img/work/optimizely.png" alt="Image not found. Please try reloading."></div>
         <div class="work-company"><b>OPTIMIZELY</b></div>
         <div class="work-position">Software Engineering Intern</div>
@@ -315,7 +328,7 @@
           </ul>
         </div>
       </div>
-      <div class="work-exp work-exp-right-1 hideme fade">
+      <div class="work-exp work-exp-left-2 hideme fade">
         <div class="work-logo"><img src="img/work/tagged.png" alt="Image not found. Please try reloading."></div>
         <div class="work-company"><b>TAGGED</b></div>
         <div class="work-position">Software Engineering Intern</div>
@@ -329,7 +342,7 @@
           </ul>
         </div>
       </div>
-      <div class="work-exp work-exp-left-2 hideme fade">
+      <div class="work-exp work-exp-right-2 hideme fade">
         <div class="work-logo"><img src="img/work/ibm.png" alt="Image not found. Please try reloading."></div>
         <div class="work-company"><b>IBM</b></div>
         <div class="work-position">Software Engineering Intern</div>
@@ -343,7 +356,7 @@
           </ul>
         </div>
       </div>
-      <div class="work-exp work-exp-right-2 hideme fade">
+      <div class="work-exp work-exp-left-3 hideme fade">
         <div class="work-logo"><img src="img/work/onprint.png" alt="Image not found. Please try reloading."></div>
         <div class="work-company"><b>ONPRINT INC.</b></div>
         <div class="work-position">Graphic Designer</div>
