Added date ranges for job experiences section.

--- a/home.html
+++ b/home.html
@@ -279,6 +279,7 @@
         <div class="work-company"><b>FACEBOOK</b></div>
         <div class="work-position">Software Engineering Intern</div>
         <div class="work-location">Menlo Park, California</div>
+        <div class="work-date-range">May 2017 - Aug 2017</div>
         <div class="work-description">
           <ul>
             <li>Implemented machine learning and ranking algorithms for the News Feed Integrity team.</li>
@@ -292,6 +293,7 @@
         <div class="work-company"><b>FACEBOOK MESSENGER</b></div>
         <div class="work-position">Software Engineering Intern</div>
         <div class="work-location">Menlo Park, California</div>
+        <div class="work-date-range">Sep 2016 - Dec 2016</div>
         <div class="work-description">
           <ul>
             <li>Released multiple full stack features for the Messenger team using PHP, JavaScript (React), and HTML/CSS.</li>
@@ -305,6 +307,7 @@
         <div class="work-company"><b>FACEBOOK</b></div>
         <div class="work-position">Software Engineering Intern</div>
         <div class="work-location">Menlo Park, California</div>
+        <div class="work-date-range">Jan 2016 - Apr 2016</div>
         <div class="work-description">
           <ul>
             <li>Released multiple full stack features for the Search/Trending team using PHP, JavaScript (React), and HTML/CSS.</li>
@@ -319,6 +322,7 @@
         <div class="work-company"><b>OPTIMIZELY</b></div>
         <div class="work-position">Software Engineering Intern</div>
         <div class="work-location">San Francisco, California</div>
+        <div class="work-date-range">May 2015 - Dec 2015</div>
         <div class="work-description">
           <ul>
             <li>Released multiple new product features using Python (GAE), JavaScript (NuclearJS/VueJS), CSS (SASS), and HTML.</li>
@@ -333,6 +337,7 @@
         <div class="work-company"><b>TAGGED</b></div>
         <div class="work-position">Software Engineering Intern</div>
         <div class="work-location">San Francisco, California</div>
+        <div class="work-date-range">Aug 2014 - Dec 2014</div>
         <div class="work-description">
           <ul>
             <li>Shipped production level code to over 2.5 million daily active users using PHP, JavaScript, HTML, and CSS.</li>
@@ -347,6 +352,7 @@
         <div class="work-company"><b>IBM</b></div>
         <div class="work-position">Software Engineering Intern</div>
         <div class="work-location">Ottawa, Ontario</div>
+        <div class="work-date-range">Jan 2014 - May 2014</div>
         <div class="work-description">
           <ul>
             <li>Shipped a Java tool that determines more system information than Window’s `systeminfo` command. This tool updates a central database and is being used internally. It saves approximately $1,000 annually per engineer.</li>
