Upgrade everything to https.

--- a/project-02.html
+++ b/project-02.html
@@ -11,10 +11,10 @@
       </p>
       <h2>Play now</h2>
       <ul>
-        <li><a href="http://www.amazon.com/gp/product/B00JTKDRUC" target="_blank">Amazon Appstore</a></li>
+        <li><a href="https://www.amazon.com/gp/product/B00JTKDRUC" target="_blank">Amazon Appstore</a></li>
         <li><a href="http://www.1mobile.com/nyan-bird-1606962.html" target="_blank">1Mobile Market</a></li>
-        <li><a href="http://www.appszoom.com/android-game/nyan-bird-kelvx.html" target="_blank">Apps Zoom (Version 1.1.0 with 5,000-10,000 downloads)</a></li>
-        <li><a href="http://www.appszoom.com/android-game/nyan-bird-klald.html" target="_blank">Apps Zoom (Latest version with 500-1,000 downloads)</a></li>
+        <li><a href="https://www.appszoom.com/android-game/nyan-bird-kelvx.html" target="_blank">Apps Zoom (Version 1.1.0 with 5,000-10,000 downloads)</a></li>
+        <li><a href="https://www.appszoom.com/android-game/nyan-bird-klald.html" target="_blank">Apps Zoom (Latest version with 500-1,000 downloads)</a></li>
       </ul>
       <h2>Software</h2>
       <p>
