--- a/project-08.html
+++ b/project-08.html
@@ -22,7 +22,7 @@
           <li><a href="https://uwaterloo.ca/sedra-student-design-centre/waterloo-high-school-electric-vehicle-challenge/race-results/2012-race-results" target="_blank">2012 Results</a></li>
         </ul>
         Not only did we have great success at the University of Waterloo contests, we actually achieved success on an international level. We placed first in races located in the US. You can read more about our team accomplishments on our <a href="http://bcielectriccarclub.weebly.com/" target="_blank">team website.</a>
-        We also made the <a href="http://www.therecord.com/news-story/2603902-high-school-design-teams-race-to-perfect-electric-cars/" target="_blank">news!</a>
+        We also made the <a href="https://www.therecord.com/news-story/2603902-high-school-design-teams-race-to-perfect-electric-cars/" target="_blank">news!</a>
       </p>
     </div>
   </div>
