--- a/project-10.html
+++ b/project-10.html
@@ -17,7 +17,7 @@
         I was personally responsible for building the Android app. I learned a lot about native Android as well as the Google SpeechRecognizer API. I implemented a signin activity which checked that the user has correct credentials before allowing them to enter the application. Once the user was verified, the UI would allow the user to click a button and I would then start listening for their voice command. Upon completion of the voice command, I would parse it and figure out if it was something that I could process by within the application itself or whether I would need to send the command to the backend server for further processing. Actions that I could parse and complete directly within the app included calling a friend, texting a friend, opening another application and more. Commands that were related to hardware such as turning lights on or off, opening or closing blinds or other appliances were all sent to the backend server to be processed via POST requests.
       </p>
       <p>
-        For a more detailed outline of our project, please visit our <a href="http://devpost.com/software/project-auxiliator-the-most-personal-personal-helper" target="_blank">devpost.</a>
+        For a more detailed outline of our project, please visit our <a href="https://devpost.com/software/project-auxiliator-the-most-personal-personal-helper" target="_blank">devpost.</a>
       </p>
       <h2>Results</h2>
       <p>
