Add canonical link href for https SEO optimization.

--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Baraa Hamodi</title>
-  <link rel="canonical" href="https://baraa.ca" />
+  <link rel="canonical" href="https://baraa.ca/home" />
 
   <!-- Behavioral Meta Data -->
   <meta name="apple-mobile-web-app-capable" content="yes">
