--- a/project-08.html
+++ b/project-08.html
@@ -15,12 +15,7 @@
       </p>
       <h2>Results</h2>
       <p>
-        At the University of Waterloo Electric Car Challenge, for three consecutive years, we won the Engineering Design Award. We also managed to finish in the top 2 every year. My team was called Bluevale. You can view the results here:
-        <ul>
-          <li><a href="https://uwaterloo.ca/sedra-student-design-centre/waterloo-high-school-electric-vehicle-challenge/race-results/2014-race-results" target="_blank">2014 Results</a></li>
-          <li><a href="https://uwaterloo.ca/sedra-student-design-centre/results/2013" target="_blank">2013 Results</a></li>
-          <li><a href="https://uwaterloo.ca/sedra-student-design-centre/waterloo-high-school-electric-vehicle-challenge/race-results/2012-race-results" target="_blank">2012 Results</a></li>
-        </ul>
+        At the University of Waterloo Electric Car Challenge, for three consecutive years, we won the Engineering Design Award. We also managed to finish in the top 2 every year.
         Not only did we have great success at the University of Waterloo contests, we actually achieved success on an international level. We placed first in races located in the US. You can read more about our team accomplishments on our <a href="https://bluevaleelectriccarclub.github.io" target="_blank">team website.</a>
         We also made the <a href="https://www.therecord.com/news-story/2603902-high-school-design-teams-race-to-perfect-electric-cars/" target="_blank">news!</a>
       </p>
