Updated Optimizely image file name to prevent adblocker removal.

--- a/home.html
+++ b/home.html
@@ -323,7 +323,7 @@
         </div>
       </div>
       <div class="work-exp work-exp-right-1 hideme">
-        <div class="work-logo"><img src="img/work/optimizely.png" alt="Image not found. Please try reloading."></div>
+        <div class="work-logo"><img src="img/work/opti.png" alt="Image not found. Please try reloading."></div>
         <div class="work-company"><b>OPTIMIZELY</b></div>
         <div class="work-position">Software Engineering Intern</div>
         <div class="work-location">San Francisco, California</div>
