Meta data and oxford commas update.

--- a/home.html
+++ b/home.html
@@ -11,15 +11,15 @@
 
   <!-- Core Meta Data -->
   <meta name="author" content="Baraa Hamodi">
-  <meta name="description" content="A young man with big dreams. Learn more about Baraa and his different skill sets, work experiences and projects here!">
-  <meta name="keywords" content="mechatronics,software,engineer,developer,html5,css3,javascript,python,design,java,c++,robotics">
+  <meta name="description" content="A young man with big dreams. Learn more about Baraa and his different skill sets, work experiences, and projects here!">
+  <meta name="keywords" content="mechatronics,software,engineer,developer,html5,css3,javascript,python,php,design,java,c++,robotics,waterloo,uwaterloo">
 
   <!-- Open Graph Meta Data -->
   <meta property="og:title" content="Baraa Hamodi">
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://baraa.ca/img/thumbnail.png">
   <meta property="og:url" content="https://baraa.ca">
-  <meta property="og:description" content="A young man with big dreams. Learn more about Baraa and his different skill sets, work experiences and projects here!">
+  <meta property="og:description" content="A young man with big dreams. Learn more about Baraa and his different skill sets, work experiences, and projects here!">
 
   <!-- Icons -->
   <link rel="apple-touch-icon" sizes="57x57" href="/img/icons/apple-touch-icon-57x57.png">
@@ -117,7 +117,7 @@
   <article id="skills" class="content dark">
     <header class="title one hideme fade">MY SKILLS</header>
     <div class="spacer"></div>
-    <div class="title two hideme fade">I take pride in my interdisciplinary approach to crafting beautiful, functional and engaging work that delights and delivers results.</div>
+    <div class="title two hideme fade">I take pride in my interdisciplinary approach to crafting beautiful, functional, and engaging work that delights and delivers results.</div>
     <div class="s-container services-container">
       <section class="services">
         <div class="skill-element hideme fade">
@@ -374,7 +374,7 @@
   <article id="projects" class="content dark">
     <header class="title one hideme fade">MY PROJECTS</header>
     <div class="spacer"></div>
-    <div class="title two hideme fade">Check out my following projects, I'm sure you'll find something interesting!<br>Click on a project to find out more!</div>
+    <div class="title two hideme fade">Check out the following projects, I'm sure you'll find something interesting!<br>Click on a project to find out more!</div>
     <div id="portfolio" class="container">
       <div class="section portfoliocontent">
         <section id="options" class="clear">
@@ -477,7 +477,7 @@
     <div class="footer-container">
       <div id="contact" class="title one hideme fade">CONTACT</div>
       <div class="spacer"></div>
-      <div class="title two hideme fade">I like to create things with fun, like-minded people. Feel free to say hello!</div>
+      <div class="title two hideme fade">I like to create things with fun, passionate people. Feel free to say hello!</div>
       <form action="https://formspree.io/bhamodi@edu.uwaterloo.ca" class="contactForm" method="post">
         <div class="bay form-horizontal">
           <div class="form-section">
