--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 
   <!-- Core Meta Data -->
   <meta name="author" content="Baraa Hamodi">
-  <meta name="description" content="A young man with big dreams. Learn more about Baraa and his different skill sets, work experiences and projects here!">
-  <meta name="keywords" content="mechatronics,software,engineer,developer,html5,css3,javascript,python,design,java,c++,robotics">
+  <meta name="description" content="A young man with big dreams. Learn more about Baraa and his different skill sets, work experiences, and projects here!">
+  <meta name="keywords" content="mechatronics,software,engineer,developer,html5,css3,javascript,python,php,design,java,c++,robotics,waterloo,uwaterloo">
 
   <!-- Open Graph Meta Data -->
   <meta property="og:title" content="Baraa Hamodi">
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://baraa.ca/img/thumbnail.png">
   <meta property="og:url" content="https://baraa.ca">
-  <meta property="og:description" content="A young man with big dreams. Learn more about Baraa and his different skill sets, work experiences and projects here!">
+  <meta property="og:description" content="A young man with big dreams. Learn more about Baraa and his different skill sets, work experiences, and projects here!">
 
   <!-- Icons -->
   <link rel="apple-touch-icon" sizes="57x57" href="/img/icons/apple-touch-icon-57x57.png">
