Cleaned up text.

--- a/project-10.html
+++ b/project-10.html
@@ -21,7 +21,7 @@
       </p>
       <h2>Results</h2>
       <p>
-        Unfortunately, we did not win the hackathon. However, we were still winners at the end of the day as we all learned so much over the 36 hours of hacking. We made many great connections and also built the MVP (minimum viable product). Hopefully one day after we polish a bit more, we'll be able to actually release it for the world to use.
+        Unfortunately, we did not win the hackathon. However, we were still winners at the end of the day as we all learned so much over the 36 hours of hacking. We made many great connections and also built the MVP (minimum viable product). Hopefully one day after we polish it a bit more, we'll be able to actually release it for the world to use.
       </p>
     </div>
   </div>
