--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
 
   <!-- Core Meta Data -->
   <meta name="author" content="Baraa Hamodi">
-  <meta name="description" content="A young man with big dreams. Learn more about Baraa and his different skill sets, work experiences, and projects here!">
+  <meta name="description" content="Software Engineer. Learn more about Baraa Hamodi and his different skill sets, work experiences, and projects here!">
   <meta name="keywords" content="mechatronics,software,engineer,developer,html5,css3,javascript,python,php,design,java,c++,robotics,waterloo,uwaterloo">
 
   <!-- Open Graph Meta Data -->
@@ -19,7 +19,7 @@
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://baraa.ca/img/thumbnail.png">
   <meta property="og:url" content="https://baraa.ca">
-  <meta property="og:description" content="A young man with big dreams. Learn more about Baraa and his different skill sets, work experiences, and projects here!">
+  <meta property="og:description" content="Software Engineer. Learn more about Baraa Hamodi and his different skill sets, work experiences, and projects here!">
 
   <!-- Icons -->
   <link rel="apple-touch-icon" sizes="57x57" href="/img/icons/apple-touch-icon-57x57.png">
@@ -77,7 +77,7 @@
   <section id="mobile-background"></section>
   <div class="main-title">
     <div class="title-container">
-      <div class="welcome text-outline">A young man with big dreams</div>
+      <div class="welcome text-outline">Dream. Inspire. Create.</div>
       <ul>
         <li class="current-title text-outline">Baraa Hamodi</li>
       </ul>
@@ -268,7 +268,7 @@
   </article>
 
   <article class="parallax p-two">
-    <div class="p-title-one p-dark hideme fade">DEVELOPED FOR</div>
+    <div class="p-title-one p-dark hideme fade">HAVE EXPERIENCE DEVELOPING FOR</div>
     <div class="p-title-two hideme fade">MOBILE & DESKTOP</div>
     <div class="spacer horizontal-line"></div>
     <div class="mobile-parallax-image hideme-slide fade"><img src="img/parallax/mobile-parallax-image.png" alt="Image not found. Please try reloading."></div>
