--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <!-- Core Meta Data -->
   <meta name="author" content="Baraa Hamodi">
-  <meta name="description" content="A young man with big dreams. Learn more about Baraa and his different skill sets, work experiences, and projects here!">
+  <meta name="description" content="Software Engineer. Learn more about Baraa Hamodi and his different skill sets, work experiences, and projects here!">
   <meta name="keywords" content="mechatronics,software,engineer,developer,html5,css3,javascript,python,php,design,java,c++,robotics,waterloo,uwaterloo">
 
   <!-- Open Graph Meta Data -->
@@ -19,7 +19,7 @@
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://baraa.ca/img/thumbnail.png">
   <meta property="og:url" content="https://baraa.ca">
-  <meta property="og:description" content="A young man with big dreams. Learn more about Baraa and his different skill sets, work experiences, and projects here!">
+  <meta property="og:description" content="Software Engineer. Learn more about Baraa Hamodi and his different skill sets, work experiences, and projects here!">
 
   <!-- Icons -->
   <link rel="apple-touch-icon" sizes="57x57" href="/img/icons/apple-touch-icon-57x57.png">
@@ -74,8 +74,8 @@
       <li class="layer" data-depth="0.15"><div class="triangles"></div></li>
 
       <!-- Main header -->
-      <li class="layer" data-depth="0.20"><div class="title"><h2>MECHATRONICS ENGINEERING STUDENT</h2><span class="line"></span></div></li>
-      <li class="layer" data-depth="0.30"><div class="main-title"><h1>Baraa Hamodi</h1><p class="sub-title text-outline">A young man with big dreams</p></div></li>
+      <li class="layer" data-depth="0.20"><div class="title"><h2>SOFTWARE ENGINEER</h2><span class="line"></span></div></li>
+      <li class="layer" data-depth="0.30"><div class="main-title"><h1>Baraa Hamodi</h1><p class="sub-title text-outline">Dream. Inspire. Create.</p></div></li>
 
       <!-- Flakes -->
       <li class="layer" data-depth="0.40">
