Added full-time facebook exp.

--- a/home.html
+++ b/home.html
@@ -283,6 +283,18 @@
       <div class="work-exp work-exp-left-0 hideme">
         <div class="work-logo"><img src="img/work/facebook.png" alt="Image not found. Please try reloading."></div>
         <div class="work-company"><b>FACEBOOK</b></div>
+        <div class="work-position">Software Engineer</div>
+        <div class="work-location">Menlo Park, California</div>
+        <div class="work-date-range">June 2018 - Present</div>
+        <div class="work-description">
+          <ul>
+            <li>Fighting fake news on the News Feed Integrity Misinformation team.</li>
+          </ul>
+        </div>
+      </div>
+      <div class="work-exp work-exp-right-0 hideme">
+        <div class="work-logo"><img src="img/work/facebook.png" alt="Image not found. Please try reloading."></div>
+        <div class="work-company"><b>FACEBOOK</b></div>
         <div class="work-position">Software Engineering Intern</div>
         <div class="work-location">Menlo Park, California</div>
         <div class="work-date-range">May 2017 - Aug 2017</div>
@@ -294,7 +306,7 @@
           </ul>
         </div>
       </div>
-      <div class="work-exp work-exp-right-0 hideme">
+      <div class="work-exp work-exp-left-1 hideme">
         <div class="work-logo"><img src="img/work/messenger.png" alt="Image not found. Please try reloading."></div>
         <div class="work-company"><b>FACEBOOK MESSENGER</b></div>
         <div class="work-position">Software Engineering Intern</div>
@@ -308,7 +320,7 @@
           </ul>
         </div>
       </div>
-      <div class="work-exp work-exp-left-1 hideme">
+      <div class="work-exp work-exp-right-1 hideme">
         <div class="work-logo"><img src="img/work/facebook.png" alt="Image not found. Please try reloading."></div>
         <div class="work-company"><b>FACEBOOK</b></div>
         <div class="work-position">Software Engineering Intern</div>
@@ -323,7 +335,7 @@
           </ul>
         </div>
       </div>
-      <div class="work-exp work-exp-right-1 hideme">
+      <div class="work-exp work-exp-left-2 hideme">
         <div class="work-logo"><img src="img/work/opti.png" alt="Image not found. Please try reloading."></div>
         <div class="work-company"><b>OPTIMIZELY</b></div>
         <div class="work-position">Software Engineering Intern</div>
@@ -338,7 +350,7 @@
           </ul>
         </div>
       </div>
-      <div class="work-exp work-exp-left-2 hideme fade">
+      <div class="work-exp work-exp-right-2 hideme fade">
         <div class="work-logo"><img src="img/work/tagged.png" alt="Image not found. Please try reloading."></div>
         <div class="work-company"><b>TAGGED</b></div>
         <div class="work-position">Software Engineering Intern</div>
@@ -353,7 +365,7 @@
           </ul>
         </div>
       </div>
-      <div class="work-exp work-exp-right-2 hideme fade">
+      <div class="work-exp work-exp-left-3 hideme fade">
         <div class="work-logo"><img src="img/work/ibm.png" alt="Image not found. Please try reloading."></div>
         <div class="work-company"><b>IBM</b></div>
         <div class="work-position">Software Engineering Intern</div>
